# midas_rs

./: README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
midas/: .gitignore  Cargo.toml  README.md
midas/src/: lib.rs
python/: .gitignore  Cargo.toml  Makefile  README.md  in.csv  out.csv  test.py
python/.cargo/: config
python/src/: lib.rs
