[package]
name = "midas_cli"
version = "0.1.1"
authors = ["Scott Steele <scottlsteele@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust port of MIDAS (Microcluster-Based Detector of Anomalies in Edge Streams)"
categories = ["algorithms", "command-line-utilities", "data-structures", "science"]
repository = "https://github.com/scooter-dangle/midas_rs"
homepage = "https://github.com/scooter-dangle/midas_rs/tree/master/cli"
keywords = ["midas", "streaming", "clustering", "count-min-sketch"]
documentation = "https://docs.rs/midas_cli"

[dependencies]
midas_rs = { version = "0.1" }
structopt = { version = "0.3" }
