[package]
name = "midas_rs"
version = "0.1.0"
authors = ["Scott Steele <scottlsteele@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust lib port of MIDAS (Microcluster-Based Detector of Anomalies in Edge Streams)"
categories = ["algorithms", "data-structures", "science"]
repository = "https://github.com/scooter-dangle/midas_rs"
homepage = "https://github.com/scooter-dangle/midas_rs/tree/master/midas"
keywords = ["midas", "streaming", "clustering", "count-min-sketch"]

[dependencies]
rand = { version = "0.7", default_features = false, features = ["small_rng"] }
