[package]
name = "midas_python"
version = "0.1.0"
authors = ["Scott Steele <scottlsteele@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Python bindings to the Rust lib port of MIDAS (Microcluster-Based Detector of Anomalies in Edge Streams)"
categories = ["algorithms", "data-structures", "science"]
repository = "https://github.com/scooter-dangle/midas_rs"
homepage = "https://github.com/scooter-dangle/midas_rs/tree/master/python"
keywords = ["python", "midas", "streaming", "clustering", "count-min-sketch"]

[lib]
name = "midas"
crate-type = ["cdylib"]

[dependencies]
midas_rs = { path = "../midas" }
cpython = { version = "0.4", features = ["extension-module"] }
