[package]
name = "midas_python"
version = "0.2.0"
authors = ["Scott Steele <scottlsteele@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Python bindings to the Rust lib port of MIDAS (Microcluster-Based Detector of Anomalies in Edge Streams)"
categories = ["algorithms", "data-structures", "science"]
repository = "https://github.com/scooter-dangle/midas_rs"
homepage = "https://github.com/scooter-dangle/midas_rs/tree/master/python"
keywords = ["python", "midas", "streaming", "clustering", "count-min-sketch"]
documentation = "https://docs.rs/midas_python"

[lib]
name = "midas"
crate-type = ["cdylib"]

[dependencies]
midas_rs = { version = "0.2" }
cpython = { version = "0.4", features = ["extension-module"] }
